# possession

./: .gitignore  README.md  pyproject.toml
src/possession/: __init__.py  agent_builder.py  auth.py  mount.py  protocols.py  testing.py  tool_meta.py  types.py  ui_tool.py
src/possession/services/: __init__.py  agent_runner.py  claude_sdk_runner.py  event_bus.py  message_router.py  session.py
tests/: test_auth.py  test_router.py  test_session.py  test_ui_tool.py
